TODO app/manifests/database.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres-stset
spec:
  serviceName: postgres-svc
  replicas: 1
  selector:
    matchLabels:
      app: postgresapp
  template:
    metadata:
      labels:
        app: postgresapp
    spec:
      volumes:
        - name: database-config-volume
          configMap:
            name: database-configmap
            items:
              - key: "init.sql"
                path: "init.sql"
      containers:
        - name: postgres-container
          image: postgres
          ports:
            - name: database
              containerPort: 5432
          volumeMounts:
            - name: postgres-data-storage
              mountPath: /var/lib/postgresql/
            - name: database-config-volume
              mountPath: /docker-entrypoint-initdb.d/
  volumeClaimTemplates:
    - metadata:
        name: postgres-data-storage
      spec:
        accessModes: ["ReadWriteOnce"]
        # storageClassName: local-path
        resources:
          requests:
            storage: 100Mi
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-svc
  labels:
    app: postgres
spec:
  ports:
  - port: 5432
    name: database
  clusterIP: None
  selector:
    app: postgresapp
